[package]
name = "red-stream-lollipop"
version = "0.0.1"
authors = ["Emeric MARTINEAU"]
edition = "2018"
description = "Red Stream Lollipop is tool to easly connect your application to Redis without know his infrastructure."
repository = "..."
readme = "README.md"
keywords = ["redis", "sentinel", "cluster"]
license-file = "LICENSE"

[dependencies]
# Config file read
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "^0.8"
serde_json = "^1.0"
# Log
slog = "2.5.2"
slog-scope = "4.1.2"
slog-stdlog = "4.0.0"
slog-term = "2.4.1"
slog-async = "2.3.0"
slog-syslog = "0.12.0"
log = "0.4.8"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false