[package]
name = "redis-concentrator"
version = "0.0.1"
authors = ["Emeric MARTINEAU"]
edition = "2018"
description = "Redis concentrator is tool to easly connect your application to Redis without know his infrastructure."
repository = "..."
readme = "README.md"
keywords = ["redis", "sentinel", "cluster"]
license-file = "LICENSE"

[dependencies]
# Config file read
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml2 = "^0.1"
serde_json = "^1.0"
# Log
slog = "^2.7"
slog-scope = "^4.4"
slog-stdlog = "^4.1"
slog-term = "^2.9"
slog-async = "^2.8"
slog-syslog = "^0.13"
log = "^0.4"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false