[package]
name = "red-concentrator"
version = "0.0.1"
authors = ["Emeric MARTINEAU"]
edition = "2018"
description = "RedConcentrator is tool to easly connect your application to Redis without know his infrastructure."
repository = "..."
readme = "README.md"
keywords = ["redis", "sentinel", "cluster"]
license-file = "LICENSE"

[dependencies]
# Config file read
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml2 = { path = "../serde_yaml2" }
#serde_yaml2 = "^0.1"
serde_json = "^1.0"
# Log
log4rs = "^1.3"
log = "^0.4"

[dependencies.uuid]
version = "^1.9"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
